2004-12-09	Benedikt Meurer <benny@xfce.org>

	* pixmaps/, Makefile.am, terminal/terminal-preferences-dialog.c,
	  Terminal.mime.xml: Added possibility to load and save terminal
	  color palettes from and to external files. Terminal additionally
	  installs MIME type and MIME icons for the .tcpalette files into
	  the proper locations to offer best possible desktop integration.

2004-12-09	Benedikt Meurer <benny@xfce.org>

	* terminal/Terminal.spec.in: Added BuildRoot and fixed URL to make
	  this work correctly.

2004-12-08	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-app.c(terminal_app_find_screen): Fix to open
	  remote displays properly.
	* terminal/terminal-shortcut-editor.c: Strip off invalid modifiers
	  when the user enters a shortcut. This fixes bug #26.

2004-12-07	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-screen.c, terminal/terminal-options.c,
	  terminal/main.c: Use -T as shortcut for --title. -t is
	  still supported for compatibility with gnome-terminal.

2004-12-06	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c: Users can open only one preferences
	  dialog per terminal window. This fixes bug #27.

2004-12-04	Benedikt Meurer <benny@xfce.org>

	* doc/C/: Fix link.

2004-12-03	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-options.c, terminal/terminal-options.h,
	  terminal/terminal-window.c, terminal/terminal-window.h,
	  terminal/terminal-app.c, terminal/main.c, doc/C/faq.html,
	  doc/C/Terminal.xml, doc/C/advanced.html: Added command line option
	  --fullscreen to put a window into fullscreen mode.
	* terminal/terminal-screen.c: Display an error if Terminal is
	  unable to determine the users login shell.
	* configure.ac, NEWS: Bump version to 0.2.1svn. Bump D-BUS interface
	  version to 2.

2004-12-03	Benedikt Meurer <benny@xfce.org>

	* configure.ac: Depend on vte 0.11.11, since AntiAlias API isn't
	  available in earlier versions.

2004-12-02	Benedikt Meurer <benny@xfce.org>
