@@ -1,0 +1,17 @@
+[Terminal color palette]
+Color1=#000000000000
+Color2=#aaaa00000000
+Color3=#0000aaaa0000
+Color4=#aaaa55550000
+Color5=#00000000aaaa
+Color6=#aaaa0000aaaa
+Color7=#0000aaaaaaaa
+Color8=#aaaaaaaaaaaa
+Color9=#555555555555
+Color10=#ffff55555555
+Color11=#5555ffff5555
+Color12=#ffffffff5555
+Color13=#55555555ffff
+Color14=#ffff5555ffff
+Color15=#5555ffffffff
+Color16=#ffffffffffff
