@@ -1,0 +1,17 @@
+[Terminal color palette]
+Color1=#000000000000
+Color2=#cdcd00000000
+Color3=#0000cdcd0000
+Color4=#cdcdcdcd0000
+Color5=#00000000cdcd
+Color6=#cdcd0000cdcd
+Color7=#0000cdcdcdcd
+Color8=#fafaebeb7d7d
+Color9=#404040404040
+Color10=#ffff00000000
+Color11=#0000ffff0000
+Color12=#ffffffff0000
+Color13=#00000000ffff
+Color14=#ffff0000ffff
+Color15=#0000ffffffff
+Color16=#ffffffffffff
