@@ -1330,7 +1330,7 @@ terminal_preferences_dialog_load_palette (GtkWidget                 *button,
   gboolean       succeed = FALSE;
   XfceRc        *rc;
   gchar         *filename;
-  gchar         *name;
+  gchar          name[32];
   guint          n;
 
   chooser = gtk_file_chooser_dialog_new (_("Select color palette file"),
@@ -1383,15 +1383,13 @@ terminal_preferences_dialog_load_palette (GtkWidget                 *button,
               xfce_rc_set_group (rc, "Terminal color palette");
               for (n = 1; n <= 16; ++n)
                 {
-                  name = g_strdup_printf ("ColorPalette%u", n);
+                  g_snprintf (name, 32, "Color%u", n);
                   value = xfce_rc_read_entry (rc, name, NULL);
-                  g_free (name);
 
                   if (G_LIKELY (value != NULL))
                     {
-                      name = g_strdup_printf ("color-palette%u", n);
+                      g_snprintf (name, 32, "color-palette%u", n);
                       g_object_set (G_OBJECT (dialog->preferences), name, value, NULL);
-                      g_free (name);
                     }
                 }
 
@@ -1411,17 +1409,44 @@ terminal_preferences_dialog_load_palette (GtkWidget                 *button,
 
 
 
+static gboolean
+save_palette (const gchar *filename,
+              GObject     *preferences)
+{
+  gchar  name[32];
+  gchar *value;
+  guint  n;
+  FILE  *fp;
+
+  fp = fopen (filename, "w");
+  if (G_UNLIKELY (fp == NULL))
+    return FALSE;
+
+  fprintf (fp, "[Terminal color palette]\n");
+  fprintf (fp, "# Generated by %s\n", PACKAGE_STRING);
+  for (n = 1; n <= 16; ++n)
+    {
+      g_snprintf (name, 32, "color-palette%u", n);
+      g_object_get (preferences, name, &value, NULL);
+      fprintf (fp, "Color%u=%s\n", n, value);
+      g_free (value);
+    }
+
+  fclose (fp);
+
+  return TRUE;
+}
+
+
+
 static void
 terminal_preferences_dialog_save_palette (GtkWidget                 *button,
                                           TerminalPreferencesDialog *dialog)
 {
   GtkWidget *chooser;
   GtkWidget *message;
-  XfceRc    *rc;
   gchar     *filename;
-  gchar     *value;
-  gchar     *name;
-  guint      n;
+  gint       response = GTK_RESPONSE_YES;
 
   chooser = gtk_file_chooser_dialog_new (_("Select color palette filename"),
                                          GTK_WINDOW (dialog),
@@ -1436,37 +1461,33 @@ terminal_preferences_dialog_save_palette (GtkWidget                 *button,
   if (gtk_dialog_run (GTK_DIALOG (chooser)) == GTK_RESPONSE_ACCEPT)
     {
       filename = gtk_file_chooser_get_filename (GTK_FILE_CHOOSER (chooser));
-      
-      rc = xfce_rc_simple_open (filename, FALSE);
-      if (G_UNLIKELY (rc == NULL))
+
+      if (g_file_test (filename, G_FILE_TEST_IS_REGULAR))
         {
           message = gtk_message_dialog_new (GTK_WINDOW (chooser),
                                             GTK_DIALOG_DESTROY_WITH_PARENT
                                             | GTK_DIALOG_MODAL,
-                                            GTK_MESSAGE_ERROR,
-                                            GTK_BUTTONS_OK,
-                                            _("Unable to open the selected file for writing."));
-          gtk_dialog_run (GTK_DIALOG (message));
+                                            GTK_MESSAGE_QUESTION,
+                                            GTK_BUTTONS_YES_NO,
+                                            _("The selected file already exists.\n"
+                                              "Do you to overwrite it?"));
+          response = gtk_dialog_run (GTK_DIALOG (message));
           gtk_widget_destroy (message);
         }
-      else
+
+      if (response == GTK_RESPONSE_YES)
         {
-          xfce_rc_delete_group (rc, "Terminal color palette", TRUE);
-          xfce_rc_set_group (rc, "Terminal color palette");
-
-          for (n = 1; n <= 16; ++n)
+          if (!save_palette (filename, G_OBJECT (dialog->preferences)))
             {
-              name = g_strdup_printf ("color-palette%u", n);
-              g_object_get (G_OBJECT (dialog->preferences), name, &value, NULL);
-              g_free (name);
-
-              name = g_strdup_printf ("ColorPalette%u", n);
-              xfce_rc_write_entry (rc, name, value);
-              g_free (value);
-              g_free (name);
+              message = gtk_message_dialog_new (GTK_WINDOW (chooser),
+                                                GTK_DIALOG_DESTROY_WITH_PARENT
+                                                | GTK_DIALOG_MODAL,
+                                                GTK_MESSAGE_ERROR,
+                                                GTK_BUTTONS_OK,
+                                                _("Unable to open the selected file for writing."));
+              gtk_dialog_run (GTK_DIALOG (message));
+              gtk_widget_destroy (message);
             }
-
-          xfce_rc_close (rc);
         }
 
       g_free (filename);
