@@ -1,0 +1,18 @@
+[Terminal color palette]
+# VIM (VI Improved) in "help xiterm" recommends these colors for xterm.
+Color1=#000000
+Color2=#c00000
+Color3=#008000
+Color4=#808000
+Color5=#0000c0
+Color6=#c000c0
+Color7=#008080
+Color8=#c0c0c0
+Color9=#808080
+Color10=#ff6060
+Color11=#00ff00
+Color12=#ffff00
+Color13=#8080ff
+Color14=#ff40ff
+Color15=#00ffff
+Color16=#ffffff
