@@ -1,0 +1,17 @@
+[Terminal color palette]
+Color1=#000000000000
+Color2=#cdcb00000000
+Color3=#0000cdcb0000
+Color4=#cdcbcdcb0000
+Color5=#1e1a908fffff
+Color6=#cdcb0000cdcb
+Color7=#0000cdcbcdcb
+Color8=#e5e2e5e2e5e2
+Color9=#4ccc4ccc4ccc
+Color10=#ffff00000000
+Color11=#0000ffff0000
+Color12=#ffffffff0000
+Color13=#46458281b4ae
+Color14=#ffff0000ffff
+Color15=#0000ffffffff
+Color16=#ffffffffffff
