@@ -13,7 +13,8 @@
   some X setups.
 - Terminal now offers the possibility to load color palettes from external
   files and to save your customized palettes to external files. This allows
-  backing up and sharing your carefully adjusted palette settings.
+  backing up and sharing your carefully adjusted palette settings. Terminal
+  ships with 4 predefined terminal color palette files.
 
 
 0.2.0
