@@ -1,3 +1,11 @@
+2004-12-10	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/terminal-preferences-dialog.c: Slightly changed the format
+	  of the .tcpalette files. Added check to notify the user when he
+	  is attempting to save to a file that already exists.
+	* linux.tcpalette, rxvt.tcpalette, vim.tcpalette, xterm.tcpalette,
+	  Makefile.am: Added predefined terminal color palette files.
+
 2004-12-09	Benedikt Meurer <benny@xfce.org>
 
 	* pixmaps/, Makefile.am, terminal/terminal-preferences-dialog.c,
